--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -24,7 +24,7 @@
           </div>
         </div>
         <div class="subtitle">問題列</div>
-        <div class="ihq-question-queue scrollable">
+        <div class="owo-question-queue scrollable">
         </div>
       </div>
     </div>
